feat: general information

--- a/Notebook/DataScienceChallenge.ipynb
+++ b/Notebook/DataScienceChallenge.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0aaca06c",
    "metadata": {},
    "outputs": [],
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "62425159",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:/Users/User/OneDrive/Desktop/LH-2025-11/Data/desafio_indicium_imdb.csv')"
+    "desafio_indicium_imdb = pd.read_csv('C:/Users/User/OneDrive/Desktop/LH-2025-11/Data/desafio_indicium_imdb.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "7236ba19",
    "metadata": {},
    "outputs": [
@@ -210,13 +210,62 @@
        "4  Orlando Bloom      1642758  377,845,905  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "desafio_indicium_imdb.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69826f33",
+   "metadata": {},
+   "source": [
+    "#### Informações Gerais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6132a7b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 999 entries, 0 to 998\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Unnamed: 0     999 non-null    int64  \n",
+      " 1   Series_Title   999 non-null    object \n",
+      " 2   Released_Year  999 non-null    object \n",
+      " 3   Certificate    898 non-null    object \n",
+      " 4   Runtime        999 non-null    object \n",
+      " 5   Genre          999 non-null    object \n",
+      " 6   IMDB_Rating    999 non-null    float64\n",
+      " 7   Overview       999 non-null    object \n",
+      " 8   Meta_score     842 non-null    float64\n",
+      " 9   Director       999 non-null    object \n",
+      " 10  Star1          999 non-null    object \n",
+      " 11  Star2          999 non-null    object \n",
+      " 12  Star3          999 non-null    object \n",
+      " 13  Star4          999 non-null    object \n",
+      " 14  No_of_Votes    999 non-null    int64  \n",
+      " 15  Gross          830 non-null    object \n",
+      "dtypes: float64(2), int64(2), object(12)\n",
+      "memory usage: 125.0+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(desafio_indicium_imdb.info())"
    ]
   },
   {
@@ -229,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "57b7eb19",
    "metadata": {},
    "outputs": [
@@ -262,48 +311,6 @@
    ],
    "source": [
     "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e8a2fd6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "7d38c652",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.duplicated(subset=['Series_Title']).sum()\n"
    ]
   }
  ],
