--- a/Notebook/DataScienceChallenge.ipynb
+++ b/Notebook/DataScienceChallenge.ipynb
@@ -5,7 +5,7 @@
    "id": "6e35a368",
    "metadata": {},
    "source": [
-    "#### Carregando os Dados"
+    "### Carregando os Dados"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "id": "69826f33",
    "metadata": {},
    "source": [
-    "#### Informações Gerais"
+    "### Informações Gerais"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "id": "078c8b36",
    "metadata": {},
    "source": [
-    "#### Limpeza dos Dados"
+    "### Tratamento dos Dados"
    ]
   },
   {
@@ -312,6 +312,268 @@
    "source": [
     "df.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105ed3aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desafio_indicium_imdb = desafio_indicium_imdb.drop(columns='Unnamed: 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e184dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Series_Title</th>\n",
+       "      <th>Released_Year</th>\n",
+       "      <th>Certificate</th>\n",
+       "      <th>Runtime</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>Overview</th>\n",
+       "      <th>Meta_score</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Star1</th>\n",
+       "      <th>Star2</th>\n",
+       "      <th>Star3</th>\n",
+       "      <th>Star4</th>\n",
+       "      <th>No_of_Votes</th>\n",
+       "      <th>Gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>A</td>\n",
+       "      <td>175 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>An organized crime dynasty's aging patriarch t...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Marlon Brando</td>\n",
+       "      <td>Al Pacino</td>\n",
+       "      <td>James Caan</td>\n",
+       "      <td>Diane Keaton</td>\n",
+       "      <td>1620367</td>\n",
+       "      <td>134,966,411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>152 min</td>\n",
+       "      <td>Action, Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>Christian Bale</td>\n",
+       "      <td>Heath Ledger</td>\n",
+       "      <td>Aaron Eckhart</td>\n",
+       "      <td>Michael Caine</td>\n",
+       "      <td>2303232</td>\n",
+       "      <td>534,858,444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>A</td>\n",
+       "      <td>202 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>The early life and career of Vito Corleone in ...</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Al Pacino</td>\n",
+       "      <td>Robert De Niro</td>\n",
+       "      <td>Robert Duvall</td>\n",
+       "      <td>Diane Keaton</td>\n",
+       "      <td>1129952</td>\n",
+       "      <td>57,300,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>U</td>\n",
+       "      <td>96 min</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>A jury holdout attempts to prevent a miscarria...</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Sidney Lumet</td>\n",
+       "      <td>Henry Fonda</td>\n",
+       "      <td>Lee J. Cobb</td>\n",
+       "      <td>Martin Balsam</td>\n",
+       "      <td>John Fiedler</td>\n",
+       "      <td>689845</td>\n",
+       "      <td>4,360,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Lord of the Rings: The Return of the King</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>U</td>\n",
+       "      <td>201 min</td>\n",
+       "      <td>Action, Adventure, Drama</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>Gandalf and Aragorn lead the World of Men agai...</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>Peter Jackson</td>\n",
+       "      <td>Elijah Wood</td>\n",
+       "      <td>Viggo Mortensen</td>\n",
+       "      <td>Ian McKellen</td>\n",
+       "      <td>Orlando Bloom</td>\n",
+       "      <td>1642758</td>\n",
+       "      <td>377,845,905</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Series_Title Released_Year Certificate  \\\n",
+       "0                                  The Godfather          1972           A   \n",
+       "1                                The Dark Knight          2008          UA   \n",
+       "2                         The Godfather: Part II          1974           A   \n",
+       "3                                   12 Angry Men          1957           U   \n",
+       "4  The Lord of the Rings: The Return of the King          2003           U   \n",
+       "\n",
+       "   Runtime                     Genre  IMDB_Rating  \\\n",
+       "0  175 min              Crime, Drama          9.2   \n",
+       "1  152 min      Action, Crime, Drama          9.0   \n",
+       "2  202 min              Crime, Drama          9.0   \n",
+       "3   96 min              Crime, Drama          9.0   \n",
+       "4  201 min  Action, Adventure, Drama          8.9   \n",
+       "\n",
+       "                                            Overview  Meta_score  \\\n",
+       "0  An organized crime dynasty's aging patriarch t...       100.0   \n",
+       "1  When the menace known as the Joker wreaks havo...        84.0   \n",
+       "2  The early life and career of Vito Corleone in ...        90.0   \n",
+       "3  A jury holdout attempts to prevent a miscarria...        96.0   \n",
+       "4  Gandalf and Aragorn lead the World of Men agai...        94.0   \n",
+       "\n",
+       "               Director           Star1            Star2          Star3  \\\n",
+       "0  Francis Ford Coppola   Marlon Brando        Al Pacino     James Caan   \n",
+       "1     Christopher Nolan  Christian Bale     Heath Ledger  Aaron Eckhart   \n",
+       "2  Francis Ford Coppola       Al Pacino   Robert De Niro  Robert Duvall   \n",
+       "3          Sidney Lumet     Henry Fonda      Lee J. Cobb  Martin Balsam   \n",
+       "4         Peter Jackson     Elijah Wood  Viggo Mortensen   Ian McKellen   \n",
+       "\n",
+       "           Star4  No_of_Votes        Gross  \n",
+       "0   Diane Keaton      1620367  134,966,411  \n",
+       "1  Michael Caine      2303232  534,858,444  \n",
+       "2   Diane Keaton      1129952   57,300,000  \n",
+       "3   John Fiedler       689845    4,360,000  \n",
+       "4  Orlando Bloom      1642758  377,845,905  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desafio_indicium_imdb.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36f87786",
+   "metadata": {},
+   "source": [
+    "##### Ajuste dos tipos de dados das colunas Released_Year, Gross e Runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0f7d9937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desafio_indicium_imdb['Released_Year'] = pd.to_numeric(desafio_indicium_imdb['Released_Year'], errors='coerce')\n",
+    "desafio_indicium_imdb['Gross'] = desafio_indicium_imdb['Gross'].str.replace('$', '').str.replace(',', '').astype(float)\n",
+    "desafio_indicium_imdb['Runtime'] = desafio_indicium_imdb['Runtime'].str.replace(' min', '').astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "28d7a21d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 999 entries, 0 to 998\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Series_Title   999 non-null    object \n",
+      " 1   Released_Year  998 non-null    float64\n",
+      " 2   Certificate    898 non-null    object \n",
+      " 3   Runtime        999 non-null    int32  \n",
+      " 4   Genre          999 non-null    object \n",
+      " 5   IMDB_Rating    999 non-null    float64\n",
+      " 6   Overview       999 non-null    object \n",
+      " 7   Meta_score     842 non-null    float64\n",
+      " 8   Director       999 non-null    object \n",
+      " 9   Star1          999 non-null    object \n",
+      " 10  Star2          999 non-null    object \n",
+      " 11  Star3          999 non-null    object \n",
+      " 12  Star4          999 non-null    object \n",
+      " 13  No_of_Votes    999 non-null    int64  \n",
+      " 14  Gross          830 non-null    float64\n",
+      "dtypes: float64(4), int32(1), int64(1), object(9)\n",
+      "memory usage: 113.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "desafio_indicium_imdb.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e37b775",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
