feat: null data processing

--- a/Notebook/DataScienceChallenge.ipynb
+++ b/Notebook/DataScienceChallenge.ipynb
@@ -568,12 +568,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04314077",
+   "metadata": {},
+   "source": [
+    "##### Tratamento de dados nulos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e37b775",
+   "execution_count": 22,
+   "id": "0ae93adc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "desafio_indicium_imdb['Gross'] = desafio_indicium_imdb['Gross'].fillna(0)\n",
+    "desafio_indicium_imdb['Meta_score']= desafio_indicium_imdb['Meta_score'].fillna(desafio_indicium_imdb['Meta_score'].median())\n",
+    "desafio_indicium_imdb['Certificate'] = desafio_indicium_imdb['Certificate'].fillna('Not Rated')\n",
+    "desafio_indicium_imdb['Overview'] = desafio_indicium_imdb['Overview'].fillna('No overview available.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "683ca87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 999 entries, 0 to 998\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Series_Title   999 non-null    object \n",
+      " 1   Released_Year  998 non-null    float64\n",
+      " 2   Certificate    999 non-null    object \n",
+      " 3   Runtime        999 non-null    int32  \n",
+      " 4   Genre          999 non-null    object \n",
+      " 5   IMDB_Rating    999 non-null    float64\n",
+      " 6   Overview       999 non-null    object \n",
+      " 7   Meta_score     999 non-null    float64\n",
+      " 8   Director       999 non-null    object \n",
+      " 9   Star1          999 non-null    object \n",
+      " 10  Star2          999 non-null    object \n",
+      " 11  Star3          999 non-null    object \n",
+      " 12  Star4          999 non-null    object \n",
+      " 13  No_of_Votes    999 non-null    int64  \n",
+      " 14  Gross          999 non-null    float64\n",
+      "dtypes: float64(4), int32(1), int64(1), object(9)\n",
+      "memory usage: 113.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "desafio_indicium_imdb.info()"
+   ]
   }
  ],
  "metadata": {
