feat: machine learning model description

--- a/Notebook/DataScienceChallenge.ipynb
+++ b/Notebook/DataScienceChallenge.ipynb
@@ -1064,6 +1064,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c683175",
+   "metadata": {},
+   "source": [
+    "##### Questão 3\n",
+    "\n",
+    "Explique como você faria a previsão da nota do imdb a partir dos dados. Quais variáveis e/ou suas transformações você utilizou e por quê? Qual tipo de problema estamos resolvendo (regressão, classificação)? Qual modelo melhor se aproxima dos dados e quais seus prós e contras? Qual medida de performance do modelo foi escolhida e por quê?\n",
+    "\n",
+    "Eu construíria um modelo de Machine Learning para prever a nota do IMDb. Utilizaria variáveis qualitativas como o gênero, diretor, atores porque a popularidade de um filme está relacionada com os indíviduos envolvidos na produção. Também utilizaria as variáveis nº de Votos, média ponderada de Críticas, duração e faturamento porque como analisado anteriormente através dos gráficos gerados, pois elas oferece uma perspectiva especializada sobre a qualidade do filme. \n",
+    "Como o objetivo é prever a nota de um filme no IMDb, estamos resolvendo um problema de regressão pois, se trata de um valor numérico contínuo. \n",
+    "Para resolver este problema, o modelo que melhor se aproxima dos dados é o Decision Tree Regressor ou o Random Forest Regressor.\n",
+    "O melhor modelo que se aproxima dos dados é o Random Forest Regressor, que é uma extensão da Árvore de Decisão que combina várias árvores.\n",
+    "Os pontos positivos são que é um modelo mais robusto e geralmente mais preciso do que o Decision Tree Regressor. Ele reduz o overfitting e lida bem com a alta dimensionalidade e a não linearidade dos dados. Em contrapartida é computacionalmente mais pesado e mais difícil de interpretar do que uma única árvore.\n",
+    "Cnsiderando que o RMSE mede a média das diferenças entre os valores previstos pelo modelo e os valores reais e que a meta é que a previsão da nota do IMDb seja o mais precisa possível, ou seja, que a diferença entre o valor real e o previsto seja a menor possível, eu escolheria o RMSE como medida de perfromance ideal para esse modelo porque o RMSE penaliza erros maiores de forma mais significativa do que erros menores.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "de7f0892",
    "metadata": {},
    "source": []
