feat: IMDb  predictive model

--- a/Notebook/DataScienceChallenge.ipynb
+++ b/Notebook/DataScienceChallenge.ipynb
@@ -1076,10 +1076,98 @@
     "Para resolver este problema, o modelo que melhor se aproxima dos dados é o Decision Tree Regressor ou o Random Forest Regressor.\n",
     "O melhor modelo que se aproxima dos dados é o Random Forest Regressor, que é uma extensão da Árvore de Decisão que combina várias árvores.\n",
     "Os pontos positivos são que é um modelo mais robusto e geralmente mais preciso do que o Decision Tree Regressor. Ele reduz o overfitting e lida bem com a alta dimensionalidade e a não linearidade dos dados. Em contrapartida é computacionalmente mais pesado e mais difícil de interpretar do que uma única árvore.\n",
-    "Cnsiderando que o RMSE mede a média das diferenças entre os valores previstos pelo modelo e os valores reais e que a meta é que a previsão da nota do IMDb seja o mais precisa possível, ou seja, que a diferença entre o valor real e o previsto seja a menor possível, eu escolheria o RMSE como medida de perfromance ideal para esse modelo porque o RMSE penaliza erros maiores de forma mais significativa do que erros menores.\n",
+    "Cnsiderando que o RMSE mede a média das diferenças entre os valores previstos pelo modelo e os valores reais e que a meta é que a previsão da nota do IMDb seja o mais precisa possível, ou seja, que a diferença entre o valor real e o previsto seja a menor possível, eu escolheria o RMSE como medida de perfromance ideal para esse modelo porque o RMSE penaliza erros maiores de forma mais significativa do que erros menores.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aed9e48",
+   "metadata": {},
+   "source": [
+    "## Machine Learning Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "b6814d2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE do modelo: 0.1991\n",
+      "Modelo salvo com sucesso no arquivo 'predictive_model.pkl'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import joblib\n",
+    "import re\n",
+    " \n",
+    "#Limpeza de dados\n",
+    "desafio_indicium_imdb['Gross'] = desafio_indicium_imdb['Gross'].astype(str).str.replace(',', '', regex=True)\n",
+    "desafio_indicium_imdb['Gross'] = pd.to_numeric(desafio_indicium_imdb['Gross'], errors='coerce')\n",
+    "desafio_indicium_imdb['Runtime'] = desafio_indicium_imdb['Runtime'].astype(str).str.replace(' min', '', regex=True)\n",
+    "desafio_indicium_imdb['Runtime'] = pd.to_numeric(desafio_indicium_imdb['Runtime'], errors='coerce')\n",
+    "desafio_indicium_imdb['Released_Year'] = pd.to_numeric(desafio_indicium_imdb['Released_Year'], errors='coerce')\n",
     "\n",
+    "# Remover dados faltantes nas colunas de interesse\n",
+    "desafio_indicium_imdb.dropna(subset=['IMDB_Rating', 'No_of_Votes', 'Meta_score', 'Runtime', 'Gross', 'Director', 'Genre'], inplace=True)\n",
     "\n",
-    "\n"
+    "# 2. Definir Variáveis (Features e Target)\n",
+    "features = ['Released_Year', 'Runtime', 'Genre', 'Director', 'No_of_Votes', 'Gross', 'Meta_score']\n",
+    "target = 'IMDB_Rating'\n",
+    "\n",
+    "X = desafio_indicium_imdb[features]\n",
+    "y = desafio_indicium_imdb[target]\n",
+    "\n",
+    "# 3. Engenharia de Recursos (One-Hot Encoding para variáveis categóricas)\n",
+    "categorical_features = ['Genre', 'Director']\n",
+    "numerical_features = ['Released_Year', 'Runtime', 'No_of_Votes', 'Gross', 'Meta_score']\n",
+    "\n",
+    "# Criar um pré-processador para as colunas\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features),\n",
+    "        ('num', SimpleImputer(strategy='median'), numerical_features) # Imputa NaNs com a mediana\n",
+    "    ])\n",
+    "\n",
+    "# 4. Criar o Pipeline do Modelo\n",
+    "# Um pipeline é usado para encadear as etapas de pré-processamento e o modelo\n",
+    "model_pipeline = Pipeline(steps=[\n",
+    "        ('preprocessor', preprocessor),\n",
+    "        ('regressor', RandomForestRegressor(n_estimators=100, random_state=42))\n",
+    "    ])\n",
+    "\n",
+    "# 5. Treinar e Avaliar o Modelo\n",
+    "# Dividir os dados em conjuntos de treinamento e teste\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    \n",
+    "# Treinar o modelo\n",
+    "model_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Fazer previsões no conjunto de teste\n",
+    "y_pred = model_pipeline.predict(X_test)\n",
+    "\n",
+    "# Avaliar o desempenho do modelo\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "print(f\"RMSE do modelo: {rmse:.4f}\")\n",
+    "    \n",
+    "# 6. Salvar o Modelo\n",
+    "model_filename = 'predictive_model.pkl'\n",
+    "joblib.dump(model_pipeline, model_filename)\n",
+    "print(f\"Modelo salvo com sucesso no arquivo '{model_filename}'\")\n"
    ]
   },
   {
