feat: predict rating script

--- a/Notebook/DataScienceChallenge.ipynb
+++ b/Notebook/DataScienceChallenge.ipynb
@@ -812,13 +812,13 @@
     "# Trata a coluna 'Released_Year' caso haja valores não numéricos\n",
     "desafio_indicium_imdb['Released_Year'] = pd.to_numeric(desafio_indicium_imdb['Released_Year'], errors='coerce')\n",
     "    \n",
-    "# Agrupa por diretor e calcule a nota média e a contagem de filmes\n",
+    "# Agrupa por diretor e calcula a nota média e a contagem de filmes\n",
     "director_analysis = desafio_indicium_imdb.groupby('Director')['IMDB_Rating'].agg(['mean', 'count'])\n",
     "    \n",
     "# Filtra para incluir apenas diretores com mais de 1 filme\n",
     "director_analysis_filtered = director_analysis[director_analysis['count'] > 1]\n",
     "    \n",
-    "# Obtenha os 10 diretores com as maiores notas médias\n",
+    "# Obtem os 10 diretores com as maiores notas médias\n",
     "top_10_directors = director_analysis_filtered.sort_values(by='mean', ascending=False).head(10)\n",
     "\n",
     "\n",
@@ -895,17 +895,16 @@
     "# A coluna 'Genre' contém múltiplas categorias, então vamos separá-las\n",
     "dii_exploded_genres = desafio_indicium_imdb.assign(Genre=desafio_indicium_imdb['Genre'].str.split(', ')).explode('Genre')\n",
     "\n",
-    "# Agrupe por gênero e calcule a nota média e a contagem de filmes para cada um\n",
+    "# Agrupa por gênero e calcula a nota média e a contagem de filmes para cada um\n",
     "genre_analysis = dii_exploded_genres.groupby('Genre')['IMDB_Rating'].agg(['mean', 'count'])\n",
     "\n",
-    "# Ordene os resultados pela nota média em ordem decrescente\n",
+    "# Ordena os resultados pela nota média em ordem decrescente\n",
     "genre_analysis.sort_values(by='mean', ascending=False, inplace=True)\n",
     "\n",
-    "# Crie o gráfico de barras com as notas médias\n",
+    "# Cria o gráfico de barras com as notas médias\n",
     "plt.figure(figsize=(14, 8))\n",
     "bars = plt.bar(genre_analysis.index, genre_analysis['mean'], color='teal')\n",
     "\n",
-    "# CORREÇÃO: Adicione a posição das barras (ticks) e a contagem de filmes nos rótulos\n",
     "plt.xticks(\n",
     "    ticks=range(len(genre_analysis.index)),\n",
     "    labels=[f'{g}\\n(N={c})' for g, c in zip(genre_analysis.index, genre_analysis['count'])],\n",
@@ -914,12 +913,10 @@
     "    fontsize=10\n",
     ")\n",
     "\n",
-    "# Adicione os rótulos de dados (valores numéricos) em cima de cada barra\n",
     "for bar in bars:\n",
     "    yval = bar.get_height()\n",
     "    plt.text(bar.get_x() + bar.get_width()/2, yval + 0.01, round(yval, 2), ha='center', va='bottom', fontsize=10)\n",
     "\n",
-    "# Adicione rótulos e título\n",
     "plt.title('Nota Média do IMDb por Gênero com Contagem de Filmes', fontsize=16)\n",
     "plt.xlabel('Gênero (Contagem de Filmes)', fontsize=12)\n",
     "plt.ylabel('Nota Média do IMDb', fontsize=12)\n",
@@ -929,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "46b5fde9",
    "metadata": {},
    "outputs": [
@@ -967,7 +964,7 @@
     "desafio_indicium_imdb['Meta_score'] = pd.to_numeric(desafio_indicium_imdb['Meta_score'], errors='coerce')\n",
     "\n",
     "\n",
-    "# Normalizando as colunas para um score combinado\n",
+    "# Normaliza as colunas para um score combinado\n",
     "desafio_indicium_imdb['IMDB_Rating_norm'] = (desafio_indicium_imdb['IMDB_Rating'] - desafio_indicium_imdb['IMDB_Rating'].min()) / (desafio_indicium_imdb['IMDB_Rating'].max() - desafio_indicium_imdb['IMDB_Rating'].min())\n",
     "desafio_indicium_imdb['Gross_norm'] = (desafio_indicium_imdb['Gross'] - desafio_indicium_imdb['Gross'].min()) / (desafio_indicium_imdb['Gross'].max() - desafio_indicium_imdb['Gross'].min())\n",
     "desafio_indicium_imdb['Meta_score_norm'] = (desafio_indicium_imdb['Meta_score'] - desafio_indicium_imdb['Meta_score'].min()) / (desafio_indicium_imdb['Meta_score'].max() - desafio_indicium_imdb['Meta_score'].min())\n",
@@ -989,7 +986,7 @@
     "    cmap='viridis'\n",
     ")\n",
     "\n",
-    "# Adicione rótulos para cada filme com ajuste manual\n",
+    "\n",
     "label_offsets = {\n",
     "    'The Lord of the Rings: The Return of the King': (-0.02, 1),\n",
     "    'The Godfather: Part II': (0, 1),\n",
@@ -1001,7 +998,7 @@
     "    offset_x, offset_y = label_offsets.get(film['Series_Title'], (0, 0))\n",
     "    plt.text(film['IMDB_Rating'] + offset_x, film['Meta_score'] + offset_y, film['Series_Title'], fontsize=9, ha='right', va='top')\n",
     "\n",
-    "# Adiciona rótulos e título\n",
+    "\n",
     "    plt.title('Top 20 Filmes com base em Nota, Crítica e Faturamento', fontsize=18)\n",
     "    plt.xlabel('Nota do IMDb', fontsize=12)\n",
     "    plt.ylabel('Meta_score', fontsize=12)\n",
@@ -1012,6 +1009,14 @@
     "labels_clean = [float(re.search(r'\\d+', s).group()) for s in labels_raw]\n",
     "labels_gross = [f'${int(s * 500000):,}' for s in labels_clean]\n",
     "plt.legend(handles, labels_gross, loc=\"upper left\", title=\"Faturamento (Gross)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79461a9f",
+   "metadata": {},
+   "source": [
+    "## Entregas"
    ]
   },
   {
@@ -1084,97 +1089,12 @@
    "id": "5aed9e48",
    "metadata": {},
    "source": [
-    "## Machine Learning Model"
+    "##### Questão 4\n",
+    "\n",
+    "Qual seria a nota do IMDB para o filme com as características apresentadas?\n",
+    "\n",
+    "De acordo com o script predict_rating.py que se encontra na pasta Data a nota do IMDb prevista para 'The Shawshank Redemption' é: 8.80."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "b6814d2f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE do modelo: 0.1991\n",
-      "Modelo salvo com sucesso no arquivo 'predictive_model.pkl'\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "import joblib\n",
-    "import re\n",
-    " \n",
-    "#Limpeza de dados\n",
-    "desafio_indicium_imdb['Gross'] = desafio_indicium_imdb['Gross'].astype(str).str.replace(',', '', regex=True)\n",
-    "desafio_indicium_imdb['Gross'] = pd.to_numeric(desafio_indicium_imdb['Gross'], errors='coerce')\n",
-    "desafio_indicium_imdb['Runtime'] = desafio_indicium_imdb['Runtime'].astype(str).str.replace(' min', '', regex=True)\n",
-    "desafio_indicium_imdb['Runtime'] = pd.to_numeric(desafio_indicium_imdb['Runtime'], errors='coerce')\n",
-    "desafio_indicium_imdb['Released_Year'] = pd.to_numeric(desafio_indicium_imdb['Released_Year'], errors='coerce')\n",
-    "\n",
-    "# Remover dados faltantes nas colunas de interesse\n",
-    "desafio_indicium_imdb.dropna(subset=['IMDB_Rating', 'No_of_Votes', 'Meta_score', 'Runtime', 'Gross', 'Director', 'Genre'], inplace=True)\n",
-    "\n",
-    "# 2. Definir Variáveis (Features e Target)\n",
-    "features = ['Released_Year', 'Runtime', 'Genre', 'Director', 'No_of_Votes', 'Gross', 'Meta_score']\n",
-    "target = 'IMDB_Rating'\n",
-    "\n",
-    "X = desafio_indicium_imdb[features]\n",
-    "y = desafio_indicium_imdb[target]\n",
-    "\n",
-    "# 3. Engenharia de Recursos (One-Hot Encoding para variáveis categóricas)\n",
-    "categorical_features = ['Genre', 'Director']\n",
-    "numerical_features = ['Released_Year', 'Runtime', 'No_of_Votes', 'Gross', 'Meta_score']\n",
-    "\n",
-    "# Criar um pré-processador para as colunas\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features),\n",
-    "        ('num', SimpleImputer(strategy='median'), numerical_features) # Imputa NaNs com a mediana\n",
-    "    ])\n",
-    "\n",
-    "# 4. Criar o Pipeline do Modelo\n",
-    "# Um pipeline é usado para encadear as etapas de pré-processamento e o modelo\n",
-    "model_pipeline = Pipeline(steps=[\n",
-    "        ('preprocessor', preprocessor),\n",
-    "        ('regressor', RandomForestRegressor(n_estimators=100, random_state=42))\n",
-    "    ])\n",
-    "\n",
-    "# 5. Treinar e Avaliar o Modelo\n",
-    "# Dividir os dados em conjuntos de treinamento e teste\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "    \n",
-    "# Treinar o modelo\n",
-    "model_pipeline.fit(X_train, y_train)\n",
-    "\n",
-    "# Fazer previsões no conjunto de teste\n",
-    "y_pred = model_pipeline.predict(X_test)\n",
-    "\n",
-    "# Avaliar o desempenho do modelo\n",
-    "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "print(f\"RMSE do modelo: {rmse:.4f}\")\n",
-    "    \n",
-    "# 6. Salvar o Modelo\n",
-    "model_filename = 'predictive_model.pkl'\n",
-    "joblib.dump(model_pipeline, model_filename)\n",
-    "print(f\"Modelo salvo com sucesso no arquivo '{model_filename}'\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de7f0892",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
